--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,37 @@ input[type=text], select, textarea {
   margin-bottom: 16px; /* Bottom margin */
   resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
 }
+/* Style the submit button with a specific background color etc */
+input[type=emne] {
+  background-color: #f2cbd9;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+label {
+    font-family: "gill-sans", sans-serif;
+    color: black; 
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Style the footer */
+.footer {
+  background-color: #bcced8;
+  padding: 10px;
+font-family: "gill-sans", sans-serif;
+    text-align: left;
+    background-size: 100%;
+justify-content: center;
+}
