--- a/css/style.css
+++ b/css/style.css
@@ -136,14 +136,16 @@ input[type=text], select, textarea {
   padding: 12px; 
   border: 1px solid #ccc; 
   border-radius: 4px; /* Rounded borders */
+  border-color: #F2CBD9;
   box-sizing: border-box; /* Make sure that padding and width stays in place */
   margin-top: 6px; /* Add a top margin */
   margin-bottom: 16px; /* Bottom margin */
   resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+
 }
 /* Style the submit button with a specific background color etc */
 input[type=emne] {
-  background-color: #f2cbd9;
+  background-color: #bcced8;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -154,6 +156,7 @@ input[type=emne] {
 label {
     font-family: "gill-sans", sans-serif;
     color: black; 
+    text-align: center;
 }
 
 * {
