--- a/css/style.css
+++ b/css/style.css
@@ -143,10 +143,16 @@ input[type=text], select, textarea {
   resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
 
 }
+
+#indhold{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 /* Style the submit button with a specific background color etc */
 input[type=emne] {
   background-color: #bcced8;
-  color: white;
+  color: black;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
@@ -156,7 +162,6 @@ input[type=emne] {
 label {
     font-family: "gill-sans", sans-serif;
     color: black; 
-    text-align: center;
 }
 
 * {
