--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,23 @@ body {
 }
 
 /***********************************************/
+/***************** Sidelayout ******************/
+
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
+
+/***********************************************/
 /***************** mobil nav *******************/
 
 /*Jeg bruger flex til at bestemme retningen for min navbar og centerer den derefter*/
@@ -62,6 +79,7 @@ body {
 /*Jeg adskiller mine menupunkter lidt*/
 #menuPunkter a {
     font-size: 25px;
+    font-family: "Baskervville", serif;
     display: block;
     margin: 10px;
     padding: 10px;
@@ -131,37 +149,37 @@ header {
 /***********************************************/
 /************ stylesheet for Contact *******************/
 
-input[type=text], select, textarea {
-  width: 100%; 
-  padding: 12px; 
-  border: 1px solid #ccc; 
-  border-radius: 4px; /* Rounded borders */
-  border-color: #F2CBD9;
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
-
+input[type="text"],
+select,
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
-#indhold{
+#indhold {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 /* Style the submit button with a specific background color etc */
 #contactButton {
-  background-color: #bcced8;
-  color: black;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-margin-bottom: 10px;
+    background-color: #bcced8;
+    color: black;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 10px;
     opacity: 60%;
 }
 /* */
-#form{
+#form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -169,40 +187,46 @@ margin-bottom: 10px;
 }
 label {
     font-family: "gill-sans", sans-serif;
-    color: black; 
+    color: black;
 }
 /* Her er til contact*/
-h1{
- background-color: #F2CBD9;
+h1 {
+    background-color: #f2cbd9;
     width: 100%;
-    text-align: center;/*Centerer teksten*/
+    text-align: center; /*Centerer teksten*/
     padding: 15px;
     opacity: 50%;
 }
 * {
-  box-sizing: border-box;
-}
-
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 5px;
+    box-sizing: border-box;
 }
 
 /***********************************************/
-/************ stylesheet for Contact *******************/
+/************ mobil Landingpage ****************/
 
+#landingMain {
+    background-image: url(/images/mobilForside.JPG);
+    background-size: cover;
+    background-position: center center;
+    /*Vi skal give main en højde for at vi kan bruge % til højde i børnene*/
+    height: 1px;
+}
+
+#landingMain .subpages {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    justify-content: space-around;
+}
 
 /***********************************************/
 /************ stylesheet for footer *******************/
 .footer {
-  background-color: #bcced8;
-  padding: 10px;
-font-family: "gill-sans", sans-serif;
+    background-color: #bcced8;
+    padding: 10px;
     text-align: left;
     background-size: 100%;
-justify-content: center;
+    justify-content: center;
     opacity: 60%;
 }
-/***********************************************/
-/************ stylesheet for footer *******************/
