--- a/css/style.css
+++ b/css/style.css
@@ -169,14 +169,14 @@ textarea {
 }
 /* Style the submit button with a specific background color etc */
 #contactButton {
-    background-color: #bcced8;
+    background-color: rgba(242,203,217,0.6);
     color: black;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     margin-bottom: 10px;
-    opacity: 60%;
+    
 }
 /* */
 #form {
@@ -191,11 +191,11 @@ label {
 }
 /* Her er til contact*/
 h1 {
-    background-color: #f2cbd9;
+    background-color: rgba(242, 203,217, 0.6);
     width: 100%;
     text-align: center; /*Centerer teksten*/
     padding: 15px;
-    opacity: 50%;
+    
 }
 * {
     box-sizing: border-box;
