--- a/css/style.css
+++ b/css/style.css
@@ -258,5 +258,25 @@ label {
     padding: 10px;
     text-align: left;
     background-size: 100%;
-    justify-content: center;
+    justify-content: space-between;
+    display: flex;
+}
+#textfooter{
+    display: flex;
+    flex-direction: column;
+}
+
+#socialmedie{
+    display: flex;
+    width: 40%;
+    align-items: center;
+}
+.icons{
+    width: 33%;
+    display: block;
+    
+}
+.icons img{
+    width: 100%;
+    
 }
