--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,7 @@ textarea {
     margin-top: 6px; /* Add a top margin */
     margin-bottom: 16px; /* Bottom margin */
     resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+    border-color:#f2cbd9;
 }
 
 #indhold {
