--- a/css/style.css
+++ b/css/style.css
@@ -249,8 +249,16 @@ label {
 /***********************************************/
 /********** stylesheet for About ***************/
 
+/***********************************************/
+/********** stylesheet for gallery **************/
 
+.gallery{
+    height: 100%;
+    width: auto;
+}
 
+/***********************************************/
+/********** stylesheet for gallery **************/
 
 /***********************************************/
 /********** stylesheet for footer **************/
