--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,6 @@ header {
     display: flex;
     justify-content: center;
     background-color: white;
-    
 }
 
 /*Tilpasning af logo i toppen på mobil*/
@@ -175,7 +174,7 @@ textarea {
     margin-top: 6px; /* Add a top margin */
     margin-bottom: 16px; /* Bottom margin */
     resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
-    border-color:#f2cbd9;
+    border-color: #f2cbd9;
 }
 
 #indhold {
@@ -185,14 +184,13 @@ textarea {
 }
 /* Style the submit button with a specific background color etc */
 #contactButton {
-    background-color: rgba(242,203,217,0.6);
+    background-color: rgba(242, 203, 217, 0.6);
     color: black;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     margin-bottom: 10px;
-    
 }
 /* */
 #form {
@@ -208,15 +206,18 @@ label {
 /***********************************************/
 /************ mobil Landingpage ****************/
 
+/*Jeg laver css specifikt til headeren på vores landingpage*/
 #landingHeader {
     height: 115px;
 }
 
 #landingHeader #logoTop {
+    /*Logoet ligges ud over header (en del af det ønskede design)*/
     position: absolute;
 }
 
 #landingMain {
+    /*Bagrundsbilledet ligges ind*/
     background-image: url(/images/mobilForside.JPG);
     background-size: cover;
     background-position: center center;
@@ -234,50 +235,79 @@ label {
 }
 
 #landingMain .subpages a {
+    /*Der ligges en baggrundsfarve på vores a tags og de styles*/
     background-color: rgba(188, 206, 216, 0.7);
     width: 80%;
     padding: 15px;
     font-family: "Baskervville", serif;
     text-decoration: none;
     font-size: 25px;
-    color:black;
+    color: black;
     display: flex;
     justify-content: center;
-    border: 1px solid #F2CBD9;
+    border: 1px solid #f2cbd9;
 }
 
 /***********************************************/
 /********** stylesheet for About ***************/
 
+#aboutMain {
+    display: flex;
+    flex-direction: column;
+}
 
+#aboutBackground {
+    background-image: url(/images/about.JPG);
+    background-size: cover;
+    background-position: center;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0;
+}
 
+#textAbout {
+    background-color: rgba(188, 206, 216, 0.7);
+    width: 75%;
+    font-size: 25px;
+    border: 1px solid #f2cbd9;
+}
+
+#textAbout p {
+    margin: 35px;
+    font-size: 20px;
+}
 
 /***********************************************/
 /********** stylesheet for footer **************/
 .footer {
     background-color: rgba(188, 206, 216, 0.7);
-    padding: 10px;
+    padding: 10px 30px;
     text-align: left;
     background-size: 100%;
     justify-content: space-between;
     display: flex;
 }
-#textfooter{
+
+#textfooter {
     display: flex;
     flex-direction: column;
 }
 
-#socialmedie{
+#socialmedie {
     display: flex;
     width: 40%;
     align-items: center;
 }
-.icons{
+.icons {
     width: 33%;
     display: block;
-    
 }
-.icons img{
+.icons img {
     width: 100%;
-    
+}
+p {
+    margin: 5px;
+    font-size: 14px;
 }
