--- a/css/style.css
+++ b/css/style.css
@@ -326,19 +326,6 @@ p {
     margin: 5px;
     font-size: 14px;
 }
-/*Herunder benytter vi os af mediaquery til at lave tablet styles*/
-@media only screen and (min-width: 768px) {
-
-}
-
-@media only screen and (min-width: 1200px) {
-    #closeNav,
-    #openNav,
-    #logo {
-        /*Disse funktioner vil vi ikke vise*/
-        display: none;
-    }
-}
 
 
 
@@ -393,6 +380,25 @@ p {
     align-items: center;
     justify-content: center;
     padding: 100px 20px;
+}
+
+/***********************************************/
+/********* mediaquery til tablet ***************/
+
+@media only screen and (min-width: 768px) {
+
+}
+
+/***********************************************/
+/********* mediaquery til web ******************/
+
+@media only screen and (min-width: 1200px) {
+    #closeNav,
+    #openNav,
+    #logo {
+        /*Disse funktioner vil vi ikke vise*/
+        display: none;
+    }
 }
 
 
