--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,8 @@ textarea {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80%;
+    width: 200px;
+    margin-top: 40px;
 }
 label {
     color: black;
@@ -449,6 +450,13 @@ p {
         padding-left: 70px;
         padding-right: 70px;
     }
+    
+    /*Vi tilpasser contact til tablet*/
+    
+    #form{
+        width: 300px;
+    }
+    
 }
 
 /***********************************************/
