--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ h1 {
 body {
     font-family: "gill-sans", sans-serif;
     margin: 0;
+    height: 100%;
 }
 
 /***********************************************/
@@ -227,8 +228,6 @@ label {
     background-image: url(/images/mobilForside.JPG);
     background-size: cover;
     background-position: center center;
-    /*Vi skal give main en højde for at vi kan bruge % til højde i børnene*/
-    height: 1px;
 }
 
 #landingMain .subpages {
