--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,9 @@ h1 {
 body {
     font-family: "gill-sans", sans-serif;
     margin: 0;
+}
+
+#landingBody {
     height: 100%;
 }
 
@@ -228,6 +231,9 @@ label {
     background-image: url(/images/mobilForside.JPG);
     background-size: cover;
     background-position: center center;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
 
 #landingMain .subpages {
@@ -237,6 +243,7 @@ label {
     height: 100%;
     justify-content: space-around;
     padding: 10% 0;
+    flex: 1;
 }
 
 #landingMain .subpage {
